@@ -8,10 +8,8 @@
 		<languageKey index="default" type="array">
 			<label index="label_GroupInformationWidget">Group Information</label>
 			<label index="information_groupInformation">Group Information</label>
-			<label index="information_title">Title</label>
+			<label index="information_name">Group Name</label>
 			<label index="information_description">Description</label>
-			<label index="information_image">Image</label>
-			<label index="information_admin">Admins</label>
 		</languageKey>
 	</data>
 </T3locallang>
