@@ -9,25 +9,18 @@
 
 <!-- ###GROUP_INFORMATION### begin -->
 
+<h4>###GROUP.NAME###</h4>
 <h4>###LLL:information_groupInformation###</h4>
 
 <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
 		<tr>
-			<td class="label">###LLL:information_title###:</td>
-			<td class="data">###GROUP.title###</td>
+			<td class="label">###LLL:information_name###:</td>
+			<td class="data">###GROUP.NAME###</td>
 		</tr>
 		<tr>
 			<td class="label">###LLL:information_description###:</td>
-			<td class="data">###GROUP.description###</td>
-		</tr>
-		<tr>
-			<td class="label">###LLL:information_image###:</td>
-			<td class="data">###GROUPIMAGE.image###</td>
-		</tr>
-		<tr>
-			<td class="label">###LLL:information_admin###:</td>
-			<td class="data">###GROUP.admin###</td>
+			<td class="data">###GROUP.DESCRIPTION###</td>
 		</tr>
 	</tbody>
 </table>
